--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,24 @@
    	}
 
     .contact-page {
-     	background: #b2d0ff;
+     	background: #ffb2f7;
      	position: fixed;
      	}
 
       .projects-page {
-        background: #ffe1b2;
+        background:#b2d0ff;
         position: fixed;
       }
+
+      .robot-page {
+        background:#B2FFE1;
+        position: fixed;
+      }
+
+.single-page {
+  background:black;
+  position:fixed;
+}
 
  	#left, #right {
  		top: 0; bottom: 0;
@@ -52,15 +62,15 @@
 
 /*NAVIGATION HOVER*/
 
-.home:hover { background-color: #B2FFE1;
+.home:hover { background-color: black; color: white;
 }
 
-.projects:hover {background-color: #ffe1b2;
-}
+/*.projects:hover {background-color: #ffe1b2;
+}*/
 
-.about:hover {background-color: #ffb2f7;}
+.contact:hover {background-color: #B2FFE1;}
 
-.contact:hover {background-color: #b2d0ff;}
+.projects:hover {background-color: #b2d0ff;}
 
 
 /*NAVIGATION PADDING*/
@@ -69,21 +79,22 @@
 }
 
 
-.test {
-  background-image: url("/images/test.png");
-  background-size: contain;
-  background-position: center;
-}
 
 .casey {
   border-bottom: 15px solid #B2FFE1;
 }
 
 
+
+
 .facts{
   background-color: #ffb2f7;
 }
 
+
+.contactme {
+  border: 10px dotted #ffb2f7;
+}
 
 .colorone {
   background-color: #B2FFE1;
@@ -104,3 +115,39 @@
 .colorfive {
   background-color: #f7ffb2;
 }
+
+
+/*IMAGE*/
+
+.robo {background: url(/images/beach.jpg);}
+
+.mint {background-color: #B2FFE1;}
+
+.biggie {color: #B2FFE1;}
+
+
+
+
+/*FONT*/
+
+.light {
+  font-family: "futura-pt",sans-serif;
+  font-style: normal;
+  font-weight: 300;
+}
+
+.book {font-family: "futura-pt",sans-serif;
+font-style: normal;
+font-weight: 400;}
+
+.heavy {font-family: "futura-pt",sans-serif;
+font-style: normal;
+font-weight: 700;}
+
+.demi {font-family: "futura-pt",sans-serif;
+font-style: normal;
+font-weight: 600;}
+
+.medium {font-family: "futura-pt",sans-serif;
+font-style: normal;
+font-weight: 500;}
