--- a/css/main.css
+++ b/css/main.css
@@ -151,3 +151,22 @@ font-weight: 600;}
 .medium {font-family: "futura-pt",sans-serif;
 font-style: normal;
 font-weight: 500;}
+
+
+/*DIGITAL ILLUSTRATIONS
+
+.timmy
+{flex: 1;}
+
+.charlie {
+  flex:1.2;}
+}
+
+.brycie {
+  flex:1.29;}
+}
+
+.llama {
+  flex:0.707;
+}
+*/
